# urc-2023

./: .gitignore  .gitmodules  .pylintrc  Dockerfile  README.md  build.sh  build_only_docker.sh  connect_to_container.sh  container_launch.sh  helper  install_wsl.ps1  k.sh  kill_trickfirerobot_container.sh  launch.sh  launch_docker_container.sh  launch_only_docker.sh  mypy.ini  pyproject.toml  send_coord.sh  send_goal.sh  setupCAN.sh  setup_can_network.sh  setup_moveit_dependencies.sh  setup_rmdx8_dependencies.sh  setup_vision_venv.sh  setup_zed_dependencies.sh  shoulderDown.sh  shoulderUp.sh  speed_cansend.sh  ssh.sh  stopMotors.sh  sync_to_orin.sh  test.sh  test_motor_spin.sh  turn_right.sh  turntableCCW.sh  turntableCW.sh
.devcontainer/: Dockerfile  README.txt  compose.yaml  devcontainer.json  root.bashrc  trickfire.bashrc
.devcontainer/rosdep/: rosdep.yaml
.github/workflows/: lint.yml  pull_request_template.md
docs/: OLDcan_moteus.md  autonomous_nav.md  can_id_allocation.md  can_moteus.md  code_overview.md  executing_on_real_rover.md  formatting.md  getting_started.md  install_on_linux.md  install_on_mac.md  install_on_windows.md  installing_on_mac.md  moteus_can.md  python_creating_a_new_node.md  run_master_dockerfile.md  running_on_rover.md
motherboard/: CMakeLists.txt  readme.md  setup_cmake.sh
motherboard/header/: I2CExpander.hpp  stepperMotor.hpp  usbHandler.hpp
motherboard/src/: main.cpp  stepperMotor.cpp
rmd_test/: CMakeLists.txt  main.cpp
src/: pymoveit2
src/antenna/: package.xml  setup.cfg  setup.py
src/antenna/antenna/: CMakeLists.txt  my_node.py  package.xml  robotInterface.py
src/arm/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/arm/arm/: ResponseStructure.srv  arduino.py  arm.py  coolingI2C.py  i2c_bus.py  individual_control_pos.py  individual_control_vel.py  inverse_kinematics.py  inverse_kinematics_display.py  inverse_kinematics_solver.py  main.py  note.txt
src/arm/config/: IMPORTANT_NOTICE.txt  joint_limits.yaml  ompl_planning.yaml
src/arm/resource/: arm.urdf  viator_urdf.urdf
src/arm/src/: my_node.cpp
src/autonomous_arm/: package.xml  setup.cfg  setup.py
src/autonomous_arm/autonomous_arm/: arm_control_node.py  key_positions.json  keyboard_locator_node.py  keyboard_pose_node.py  spacebar_detector.py  typing_coordinator_node.py
src/autonomous_nav/: NAV2_PARAMS_GUIDE.md  navigation.md  package.xml  setup.cfg  setup.py
src/autonomous_nav/autonomous_arm/: arm_camera_processing_node.py  arm_control_node.py  aruco_detection_node.py  localization_node.py  message_handler_node.py
src/autonomous_nav/autonomous_arm/camera_calibration/: calibration_image_getter.py  camera_calibration.py
src/autonomous_nav/autonomous_nav/: check_vision_venv.sh  cmd_vel_to_wheel_vel.py  control_node.py  decision_making_node.py  dwa_planner.py  gps_anchor_node.py  localization_node.py  navigation_node.py  searcher_node.py  sensor_processing_node.py  stuck_detection_node.py  vision_processing_node.py  waypoint_manager_node.py
src/autonomous_nav/autonomous_nav/tests/: navigation_node_tests.py  simuate_dwa_planner.py  test_dwa_planner.py  test_stuck_detection_node.py
src/autonomous_nav/config/: ekf.yaml  nav2_params.yaml  navsat_transform.yaml  params.yaml  ublox.yaml  zed2i.yaml
src/autonomous_nav/launch/: autonomous_navigation.launch.py
src/camera/: package.xml  setup.cfg  setup.py
src/camera/camera/: roscamera.py  roscamera.py.save
src/camera/test/: test_copyright.py
src/camera_subscriber_test/: package.xml  setup.cfg  setup.py
src/camera_subscriber_test/camera_subscriber_test/: roscamerasub.py
src/can/: CMakeLists.txt  package.xml
src/can/src/: my_node.cpp
src/can_moteus/: package.xml  setup.cfg  setup.py
src/can_moteus/can_moteus/: OLDmoteus_motor.py  moteus_motor.py  moteus_multiprocess.py  moteus_thread_manager.py  ros_moteus_bridge.py
src/can_rmdx8/: package.xml  setup.cfg  setup.py
src/communication/: CMakeLists.txt  package.xml
src/custom_interfaces/: CMakeLists.txt  package.xml  robot_info.py  robot_interface.py
src/drivebase/: package.xml  setup.cfg  setup.py
src/dummy_node/: package.xml  setup.cfg  setup.py
src/example_node/: package.xml  setup.cfg  setup.py
src/executor_test/: package.xml  setup.cfg  setup.py
src/heartbeat/: package.xml  setup.cfg  setup.py
src/hello_world/: CMakeLists.txt  package.xml
src/hello_world/include/hello_world/: hello_node.hpp
src/hello_world/src/: hello_node.cpp
src/houdini_launch/: package.xml  setup.cfg  setup.py
src/interface/: CMakeLists.txt  package.xml  robot_info.py  robot_interface.py
src/launch/: package.xml  setup.cfg  setup.py
src/lib/: color_codes.py  configs.py  json_msg.py  log_msg.py  moteus_data_out_json_helper.py  moteus_motor_state.py  rmd_motor_state.py  rmdx8_motor_state.py
src/life_detection/: package.xml  setup.cfg  setup.py
src/localization/: package.xml  setup.py
src/mission_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/mission_control_data/: package.xml  setup.cfg  setup.py
src/mission_control_py/: package.xml  setup.cfg  setup.py
src/mission_control_test/: index.html  script.js
src/mission_control_updater/: package.xml  setup.cfg  setup.py
src/monitering/: CMakeLists.txt  package.xml
src/motherboard_driver/: package.xml  setup.cfg  setup.py
src/robot_info/: package.xml  setup.cfg  setup.py
src/science_system/: package.xml  setup.cfg  setup.py
src/sensor/: CMakeLists.txt  package.xml
src/teleoperation/: package.xml  setup.cfg  setup.py
src/temp_light/: package.xml  setup.cfg  setup.py
src/testingInterface/: package.xml  setup.cfg  setup.py
src/testingInterface/testingInterface/: testingNode.py
src/unveil_arm/: package.xml  setup.cfg  setup.py
src/utility/: canbus_mappings.py  color_text.py  moteus_data_in_json_helper.py  moteus_data_out_json_helper.py
src/viator_launch/: package.xml  setup.py
src/yolo_vision_trainer/: yolo_vision_trainer.py
testingInterface/: package.xml  setup.cfg  setup.py
testingInterface/testingInterface/: testingNode.py
(+81 files in other folders)
