<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<<<<<<<< HEAD:src/custom_interfaces/package.xml
  <name>custom_interfaces</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="vladimirkupryukhin@gmail.com">trickfire</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
========
  <name>testingInterface</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="matthew.c.perry@outlook.com">trickfire</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
>>>>>>>> e9f631c (Robot Interface Merge (#24)):src/testingInterface/package.xml

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
